Production/Production/src/objects/ContactReAssignSearchSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>New_Owner_Id__c</fullName>
        <label>New Owner Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Asset_Records__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Number Of Asset Records</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Characters__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Number Of Characters</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Contact_Records__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Number Of Contact Records</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contact Re-Assign Search Settings</label>
</CustomObject>